--- a/addbio.html
+++ b/addbio.html
@@ -30,8 +30,8 @@
     <div class="Adicionar_Artigo">
         <h1>Adicionar Artigo Biologia</h1>
         <form action="http://localhost:3001/addbio" method="POST"> 
-            <label for="nome">Nome do Artigo:</label>
-            <input type="text" id="nome" name="nome" required>
+            <label for="titulo">Nome do Artigo:</label>
+            <input type="text" id="titulo" name="titulo" required>
             <br>
             <label for="desc">Descrição:</label>
             <textarea id="desc" name="desc" required></textarea>
