--- a/addqui.html
+++ b/addqui.html
@@ -27,8 +27,8 @@
     <div class="Adicionar_Artigo">
         <h1>Adicionar Artigo Quimica</h1>
         <form action="http://localhost:3001/addqui" method="POST"> 
-            <label for="nome">Nome do Artigo:</label>
-            <input type="text" id="nome" name="nome" required>
+            <label for="titulo">Nome do Artigo:</label>
+            <input type="text" id="titulo" name="titulo" required>
             <br>
             <label for="desc">Descrição:</label>
             <textarea id="desc" name="desc" required></textarea>
