--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
     <div class="navbar">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">FiapPédia</a>
+          <a class="navbar-brand" href="D:\Henrique\AC2-server-node-main\index.html">FiapPédia</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span> 
           </button>
-          <button type="button" class="btn btn-success">Fisíca</button>
-          <button type="button" class="btn btn-info">Biologia</button>
-          <button type="button" class="btn btn-warning">Química</button>
+          <button type="button" class="btn btn-success"><a href="fisica.json">Fisíca</a></button>
+          <button type="button" class="btn btn-info" ><a href="biologia.json">Biologia</a></button>
+          <button type="button" class="btn btn-warning"><a href="quimica.json">Química</a></button>
+          <div class="search">
+            <button class="btn btn-outline-success" type="submit"><a href="buscarAssunto.html">Procurar assunto</a></button>
+          </div>  
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Criar
+              Opções
             </a>
         <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Adicionar Novo Artigo</a></li>
-        </div>
+            <li><a class="dropdown-item" href="addbio.html">Adicionar artigo em Biologia</a></li>
+            <li><a class="dropdown-item" href="addfis.html">Adicionar artigo em Física</a></li>
+            <li><a class="dropdown-item" href="addqui.html">Adicionar artigo em Química</a></li>
+         </ul>
+
+
           </div>
         </div>
+      </div>
       </nav>
 
       <header>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Teste</h5>
-              <p class="card-text">Testando Card</p>
-              <a href="#" class="btn btn-primary">Botao</a>
             </div>
       </header>
  
