--- a/buscarAssunto.html
+++ b/buscarAssunto.html
@@ -11,26 +11,14 @@
     <div class="navbar">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="D:\Henrique\AC2-server-node-main\index.html">FiapPédia</a>
+              <a class="navbar-brand" href="/index.html">FiapPédia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span> 
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <button type="button" class="btn btn-success"><a href="fisica.json">Fisíca</a></button>
-                <button type="button" class="btn btn-info" ><a href="biologia.json">Biologia</a></button>
-                <button type="button" class="btn btn-warning"><a href="quimica.json">Química</a></button>
-                <div class="search">
-                  <button class="btn btn-outline-success" type="submit"><a href="buscarAssunto.html">Procurar assunto</a></button>
-                </div>  
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Opções
-                  </a>
-              <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="addbio.html">Adicionar artigo em Biologia</a></li>
-                  <li><a class="dropdown-item" href="addfis.html">Adicionar artigo em Física</a></li>
-                  <li><a class="dropdown-item" href="addqui.html">Adicionar artigo em Química</a></li>
-               </ul>
+                <button type="button" class="btn btn-success">Fisíca</button>
+                <button type="button" class="btn btn-info">Biologia</button>
+                <button type="button" class="btn btn-warning">Química</button>
               </div>
             </div>
           </nav>
@@ -45,6 +33,11 @@
         </form>
     </div>
 
+    <script>
+      var Input = document.getElementById('titutloURL')
+      console.log(tituloURL)
+      console.log(Input)
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
