--- a/index.html
+++ b/index.html
@@ -9,25 +9,34 @@
 </head>
 <body>
     <div class="navbar">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">FiapPédia</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span> 
-          </button>
-          <button type="button" class="btn btn-success">Fisíca</button>
-          <button type="button" class="btn btn-info">Biologia</button>
-          <button type="button" class="btn btn-warning">Química</button>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Criar
-            </a>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Adicionar Novo Artigo</a></li>
-        </div>
-          </div>
-        </div>
-      </nav>
+      <div class="navbar">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">FiapPédia</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span> 
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <button type="button" class="btn btn-success"><a href="fisica">Fisíca</a></button>
+                <button type="button" class="btn btn-info" ><a href="biologia">Biologia</a></button>
+                <button type="button" class="btn btn-warning"><a href="quimica">Química</a></button>
+                <div class="search">
+                  <button class="btn btn-outline-success" type="submit"><a href="buscarAssunto">Procurar assunto</a></button>
+                </div>  
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Opções
+                  </a>
+              <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="addbio">Adicionar artigo em Biologia</a></li>
+                  <li><a class="dropdown-item" href="addfis">Adicionar artigo em Física</a></li>
+                  <li><a class="dropdown-item" href="addqui">Adicionar artigo em Química</a></li>
+               </ul>
+
+              </div>
+            </div>
+          </nav>
+	
 
       <header>
         <div class="card" style="width: 18rem;">
